package main.java.com.upb.agripos.model.kontrak;

public interface Validatable {
    boolean validasi(); // contoh: OTP atau PIN
}

